<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_background"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="24dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/title_chart_selection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_chart_type"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_chart_selection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:text="@string/select_chart_type_subtitle"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_chart_selection" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_bar_chart_daily"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toStartOf="@id/card_bar_chart_hourly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_chart_selection"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/daily_bar_chart"
                android:src="@drawable/stats"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/daily_bar_chart"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="13sp"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_bar_chart_hourly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_bar_chart_daily"
        app:layout_constraintTop_toTopOf="@id/card_bar_chart_daily"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/hourly_bar_chart"
                android:src="@drawable/metrics" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:maxLines="1"
                android:text="@string/hourly_bar_chart"
                android:textAlignment="center"
                android:textSize="13sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_gauge_chart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toStartOf="@id/card_metric_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_bar_chart_daily"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/gauge_chart"
                android:src="@drawable/guage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/gauge_chart"
                android:maxLines="1"
                android:textAlignment="center"
               android:textSize="13sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_metric_chart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_gauge_chart"
        app:layout_constraintTop_toTopOf="@id/card_gauge_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/metric_chart"
                android:src="@drawable/ic_metric_chart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/metric_chart"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="13sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>